增加地址保存